# YUVtool

./: .gitignore  CMakeLists.txt  README
cmake/Modules/: FindInkscape.cmake  FindSphinx.cmake  UseLATEX.cmake
doc/: CMakeLists.txt
doc/developers_documentation/: Bibliography.tex  CMakeLists.txt  Introduction.tex  YUVtool_developers_documentation.tex  bibliography.rst  conf.py.in  gui.rst  implementation.rst  index.rst  introduction.rst  pixel_format_representation.rst  xml_companion_format.rst
doc/developers_documentation/GUI/: GUI.tex
doc/developers_documentation/implementation/: implementation.tex
src/: .clang-format  CMakeLists.txt
src/cli/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  SFMLWidget.cpp  SFMLWidget.h  color_space_frame.cpp  color_space_frame.h  colorspace_frame.cpp  colorspace_frame.h  drawer_gl.cpp  drawer_gl.h  format_chooser_dialog.cpp  format_chooser_dialog.h  format_chooser_widget.cpp  format_chooser_widget.h  main.cpp  resolution_and_format_dialog.cpp  resolution_and_format_dialog.h  resolution_chooser_widget.cpp  resolution_chooser_widget.h  scroll_adapter.cpp  scroll_adapter.h  viewer_frame.cpp  viewer_frame.h  yuv_tool_application.cpp  yuv_tool_application.h
src/tests/: CMakeLists.txt  cache_test.cpp  color_transform_test.cpp  saturable_fixed_test.cpp  xml_metadata_test.cpp
src/yuv/: Bit_position.h  CMakeLists.txt  Cache.h  Coordinates.h  Display_device.cpp  Display_device.h  Errors.cpp  Errors.h  Fixed.h  OpenGL_drawer.cpp  OpenGL_drawer.h  Picture_buffer.cpp  Picture_buffer.h  Pixel_format.cpp  Pixel_format.h  TComponents.cpp  TComponents.h  TYUV_file.cpp  TYUV_file.h  Yuv_file.cpp  Yuv_file.h  bit_position.h  coordinates.h  picture_buffer.cpp  picture_buffer.h  saturable_fixed.cpp  saturable_fixed.h  trees_and_heaps.h  utils.h  xml_metadata.cpp
src/yuv/include/yuv/: Bit_position.h  Cache.h  Coordinates.h  Errors.h  Picture_buffer.h  Pixel_format.h  Yuv_file.h  saturable_fixed.h  utils.h  xml_metadata.h
